src/test/deca/context/invalid/improvided/methodCall_typeNotClass.deca
// Description:
//   Appel d'une méthode sur un type hors les classes.
//
// Résultats:
//   Erreur Contextuelle
//   Ligne 14: You cannot apply the given method to a such type. 
class A{
   protected int x;
   int getX(){
   }
}
{
   float z;
   z.getX();
}
